	* after a search with Tree window opened for current base, don't load automatically the first game in filter, or the Tree will be refreshed, overwriting the filter
- updated spanish translation (thanks to Benigno Hernández)
- updated swedish translation (thanks to Hans Eriksson)
- Fix : finder (Unix systems) : backup of PGN files with upper case extension

[March 2009 ]

scid-3.6.7
-----------
- This release requires Tcl/Tk 8.5 or higher
- Fix : Game annotation, annotating all moves : when the next move was the expected one (calculated by the engine), no annotation was added, which was not coherent with "annotate all moves"
- Reworked board setup dialog (thanks to Steven Atkinson)
- Correspondence chess :
  * Parse "TimeControl" and show in tooltip if it is sent by the server
- Sound:
  * Add "alert" sound from the CE to the PC version as well. Use
    ::utils::sound::PlaySound "sound_alert"
  * wav-file added to the package
- Correspondence Chess
  * Adopt button alignement
  * Allow to specify the rating system used by the site
    (if none is given, default to ICCF)
  * Make window resizable
  * Make window dockable
  * Fix: call mailers on windows if installed to dirs with spaces
  * New email games now show up in the game list immediately, flags
  are preset for europe to give the user an idea what to set at all.
  * Show last move in tooltip for the "to move" icon (suggested by Dhanish)
  * move delete in/outbox button furter away from Process Inbox (suggested by Dhanish)
  * Yes/No dialogue before cleaning the in/outbox (suggested by Dhanish)
  * All paths required use $scidDataDir/$scidConfigDir variable if possible. This allows more seemless usage from an USB drive on Windows where the drive letters change all the time.
  * Improve GUI for non-unique game IDs.
  * Deleted games are now ignored in search of a sync-target.
  * Fix: offline state file kept growing infinitely