@@ -4,7 +4,7 @@
 |                                                           |
  ===========================================================
 regarder spellcheck.zip
-
+Bug export PGN windows en mode docked = 0
 -------------------------------
 99 lignes de gamelist pose pb
 -------------------------------
